--- a/wwwindex.html
+++ b/wwwindex.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-<title>Default Web Site Page</title>
+<title>EHCP Default Web Site Page</title>
 <style type="text/css">
 body {font-family:arial;margin:0;padding:0;background:url(/images_default_index/bg.jpg) repeat-x #dff4fe;color:#6f6f6f;font-size:12px;}
 a {color:#0075a9;}
@@ -30,7 +30,7 @@ p.troubleshoot {font-style:italic;border:dashed 1px #dfe9ed;padding:5px;margin:1
 <div id="wrap">
 
 <div class="msg">
-  <p><strong>Default Web Site Page</strong></p>
+  <p><strong>EHCP Default Web Site Page</strong></p>
    <p class="troubleshoot"><br>
    If you feel you have reached this page in error, please contact the web site owner.<br>
    <a href="/ehcp"><h3>Click here for the control panel on your server!</h3></a>
